# TextReadabilityScorer

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
TextReadabilityScorer/: README.md
src/scorer/: analyzer.py  doccument_reader.py  document_reader.py  metrics.py  report.py  scorer.py  simplifier.py
